# portable-file-dialogs

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.cpp  example.vcxproj  portable-file-dialogs.cpp  portable-file-dialogs.h
doc/: message.md  notify.md  open_file.md  pfd.md  save_file.md  select_folder.md
examples/: CMakeLists.txt  Makefile  example.cpp  example.vcxproj
